--- a/PigGPTClient/PigGPT.top.Config/Config.json
+++ b/PigGPTClient/PigGPT.top.Config/Config.json
@@ -1,8 +1,4 @@
 {
-<<<<<<< HEAD
-    "url" : "http://chat.PigGPT.top/PigGPT",
+    "url" : "http://PigGPTServer",
     "dataPath" : "./PigGPT.top.Data"
-=======
-    "url" : "http://PigGPTServer"
->>>>>>> 839b772d3a007f259df3a54eac0137cb83ba3fb6
 }
